<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.reportissues.communitycommunicator.MainActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="366dp"
        android:layout_height="446dp"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:ignore="MissingPrefix"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/report_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/map"
        android:layout_below="@+id/map"
        android:onClick="checkForLogin"
        android:text="@string/report_btn" />

    <Button
        android:id="@+id/myreports_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myreport_btn"
        android:layout_below="@+id/map"
        android:layout_toStartOf="@+id/recenter_btn" />

    <Button
        android:id="@+id/recenter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/center_map"
        android:onClick="currentLocation"
        android:layout_below="@+id/map"
        android:layout_alignEnd="@+id/map" />
</RelativeLayout>
